@@ -36,15 +36,15 @@ public class AuthController {
 
     @Transactional
     @RequestMapping(value = "/login")
-    public AjaxResponse createAuthenticationToken(@RequestBody UserEntity user) {
+    public AjaxResponse<?> createAuthenticationToken(@RequestBody UserEntity user) {
         if (user.email() == null || user.password() == null || user.email().equals(user.password()))
-            return new AjaxResponse<>(new Status(10022, "The query conditions are not met"));
+            return new AjaxResponse<>(ResponseStatus.S10022.getStatus());
         return userService.findByEmailContainingIgnoreCase(user.email())
                 .map(userEntity -> {
                     if (userEntity.password() == null)
-                        return new AjaxResponse<>(new Status(10031, "Access is available only through a social network"));
+                        return new AjaxResponse<>(ResponseStatus.S10031.getStatus());
                     if (!userEntity.active())
-                        return new AjaxResponse<>(new Status(10023, "Sorry, you account not activate yet. Check you email"));
+                        return new AjaxResponse<>(ResponseStatus.S10023.getStatus());
                     if (BCrypt.checkpw(user.password(), userEntity.password())) {
                         HashMap<String, Object> tokens = new HashMap<>();
                         Token generatedAccessToken = jwtTokenUtil.generateAccessToken(JwtUserUtil.create(userEntity));
@@ -58,29 +58,29 @@ public class AuthController {
                         userService.save(userEntity);
 
                         return new AjaxResponse<>(
-                                new Status(11010, "Successful login"),
+                                ResponseStatus.S11010.getStatus(),
                                 new LoginStatus()
                                         .email(user.email())
                                         .social(userEntity.social() != SNS.local)
                                         .tokens(tokens)
-                                        .roles(userEntity.authorityEntities().stream().map(UserAuthorityEntity::authorityName).collect(Collectors.toList()))
+                                        .roles(userEntity.authorityEntities().stream().map(UserAuthorityEntity::authorityName).toList())
                                         .settings(userEntity.userSettingsEntity()));
                     } else
-                        return new AjaxResponse<>(new Status(10024, "Sorry, wrong email or password"));
+                        return new AjaxResponse<>(ResponseStatus.S10024.getStatus());
                 })
-                .orElse(new AjaxResponse<>(new Status(10024, "Sorry, wrong email or password")));
+                .orElse(new AjaxResponse<>(ResponseStatus.S10024.getStatus()));
     }
 
     @Transactional
     @RequestMapping(value = "/refresh")
-    public AjaxResponse refreshAndGetAuthenticationToken(@RequestBody Token inputToken) {
+    public AjaxResponse<?> refreshAndGetAuthenticationToken(@RequestBody Token inputToken) {
         final String token = inputToken.token();
         Long id = jwtTokenUtil.getJwtUserIdFromToken(token);
         return userService.get(id)
                 .map(userEntity -> {
                     List<Token> tokenList = new ArrayList<>();
                     if (userEntity.refreshTokens() != null)
-                        tokenList = new ObjectMapper().convertValue(userEntity.refreshTokens(), new TypeReference<List<Token>>() {
+                        tokenList = new ObjectMapper().convertValue(userEntity.refreshTokens(), new TypeReference<>() {
                         });
                     if (tokenList.stream().anyMatch(refreshToken -> refreshToken.token().equals(token) && new Date().getTime() / 1000 < refreshToken.expires_in())) {
                         HashMap<String, Object> tokens = new HashMap<>();
@@ -95,12 +95,12 @@ public class AuthController {
                         userService.save(userEntity);
 
                         return new AjaxResponse<>(
-                                new Status(11010, "Successful login"),
+                                ResponseStatus.S11010.getStatus(),
                                 new LoginStatus()
                                         .tokens(tokens));
                     }
-                    return new AjaxResponse<>(new Status(11017, "Need re login"));
+                    return new AjaxResponse<>(ResponseStatus.S11017.getStatus());
                 })
-                .orElse(new AjaxResponse<>(new Status(10012, "You must be logged")));
+                .orElse(new AjaxResponse<>(ResponseStatus.S10012.getStatus()));
     }
 }
